python-inheritance/tests/1-my_list.txt
~ ``my_list`` MyList ~
======================

import the thing to get started:

>>> MyList = __import__('1-my_list').MyList

proceed:

>>> issubclass(MyList, list)
True
>>> tesuto = MyList()
>>> type(tesuto)
<class '1-my_list.MyList'>
>>> print(tesuto)
[]
>>> 'print_sorted' in dir(tesuto)
True
>>> tesuto.print_sorted()
[]
>>> tesuto = MyList(None)
Traceback (most recent call last):
...
TypeError: MyList.__init__() takes 1 positional argument but 2 were given
>>> tesuto = MyList([2, 4, 8])
Traceback (most recent call last):
...
TypeError: MyList.__init__() takes 1 positional argument but 2 were given
>>> tesuto.append(4)
>>> tesuto.print_sorted()
[4]
>>> tesuto.append(8)
>>> tesuto.append(16)
>>> tesuto.print_sorted()
[4, 8, 16]
>>> tesuto.append(2)
>>> tesuto.print_sorted()
[2, 4, 8, 16]
>>> tesuto.append(-32)
>>> print(tesuto)
[4, 8, 16, 2, -32]
>>> tesuto.print_sorted()
[-32, 2, 4, 8, 16]
>>> tesuto = MyList()
>>> tesuto.append(-1337)
>>> tesuto.print_sorted()
[-1337]
>>> tesuto.append(-69)
>>> tesuto.append(-420)
>>> tesuto.print_sorted()
[-1337, -420, -69]
>>> print(tesuto)
[-1337, -69, -420]
>>> tesuto.append(-0)
>>> print(tesuto)
[-1337, -69, -420, 0]
>>> tesuto.print_sorted()
[-1337, -420, -69, 0]
>>> tesuto.append('string')
>>> print(tesuto)
[-1337, -69, -420, 0, 'string']
>>> tesuto.print_sorted()
Traceback (most recent call last):
...
TypeError: '<' not supported between instances of 'str' and 'int'
>>> del tesuto
>>> print(tesuto)
Traceback (most recent call last):
...
NameError: name 'tesuto' is not defined
